- Added option to control view bobbing for shoulder surfing perspective.